[gd_scene load_steps=9 format=3 uid="uid://dh4tyq4inqf43"]

[ext_resource type="Script" uid="uid://bvj6ps6p06dcv" path="res://raw_data_scene.gd" id="1_d5cob"]
[ext_resource type="Theme" uid="uid://r35et6wncvi0" path="res://themes/BarTheme.tres" id="2_ispqb"]
[ext_resource type="Theme" uid="uid://cnm886uwig4ku" path="res://themes/PlaintextTheme.tres" id="3_hvvkw"]
[ext_resource type="Texture2D" uid="uid://galhbv300t4b" path="res://assets/purplepoint.svg" id="3_lex8q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06dd8"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_color = Color(0.101961, 0.101961, 0.101961, 1)

[sub_resource type="Theme" id="Theme_cjd1o"]
Button/font_sizes/font_size = 25
Button/styles/normal = SubResource("StyleBoxFlat_06dd8")

[sub_resource type="ButtonGroup" id="ButtonGroup_teviq"]
resource_name = "filebut"

[sub_resource type="CodeHighlighter" id="CodeHighlighter_gikk4"]
number_color = Color(1, 0.619608, 0.392157, 1)
symbol_color = Color(0.490196, 0.811765, 1, 1)
function_color = Color(0.478431, 0.635294, 0.968627, 1)
member_variable_color = Color(0.45098, 0.854902, 0.792157, 1)
color_regions = {
"\" :": Color(0.309804, 0.839216, 0.745098, 1)
}

[node name="RawDataScene" type="Node2D"]
script = ExtResource("1_d5cob")

[node name="VSplit" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 916)
offset_right = 1920.0
offset_bottom = 570.0
theme = ExtResource("2_ispqb")
theme_override_constants/separation = 0

[node name="FileHBox" type="HBoxContainer" parent="VSplit"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="CompsButton" type="Button" parent="VSplit/FileHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_cjd1o")
toggle_mode = true
button_group = SubResource("ButtonGroup_teviq")
text = "components.json"
icon = ExtResource("3_lex8q")

[node name="NodeTypeButton" type="Button" parent="VSplit/FileHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_cjd1o")
toggle_mode = true
button_group = SubResource("ButtonGroup_teviq")
text = "node_types.json"
icon = ExtResource("3_lex8q")

[node name="CodeEdit" type="CodeEdit" parent="VSplit"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_hvvkw")
wrap_mode = 1
indent_wrapped_lines = true
scroll_smooth = true
scroll_fit_content_width = true
minimap_draw = true
caret_blink = true
use_custom_word_separators = true
syntax_highlighter = SubResource("CodeHighlighter_gikk4")
highlight_all_occurrences = true
highlight_current_line = true
line_folding = true
gutters_draw_breakpoints_gutter = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[connection signal="toggled" from="VSplit/FileHBox/CompsButton" to="." method="_on_comps_button_toggled"]
[connection signal="toggled" from="VSplit/FileHBox/NodeTypeButton" to="." method="_on_node_type_button_toggled"]
